[package]
name = "sema"
version = "0.1.1"
authors = ["Cole Reynolds <cpjreynolds@gmail.com>"]
description = "Rust semaphore library"
documentation = "https://cpjreynolds.github.io/sema"
repository = "https://github.com/cpjreynolds/sema"
homepage = "https://github.com/cpjreynolds/sema"
readme = "README.md"
license = "MIT"
keywords = ["sema", "semaphore", "sync", "thread"]

[dependencies]
libc = "*"
