[package]
name = "sema"
version = "0.1.2"
authors = ["Cole Reynolds <cpjreynolds@gmail.com>"]
description = "Rust semaphore library"
documentation = "https://cpjreynolds.github.io/sema"
repository = "https://github.com/cpjreynolds/sema"
homepage = "https://github.com/cpjreynolds/sema"
readme = "README.md"
license = "MIT"
keywords = ["sema", "semaphore", "sync", "thread"]

[dependencies]
libc = "0.1"
rand = "0.3"

[dev-dependencies]
nix = "*"
lazy_static = "*"
